chore: set request extension and use getFirst()
- Pass the file extension to FileSystemIdentificationRequest
- Use List.getFirst() instead of get(0) in Sedav22Converter

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>